--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.4",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -33,7 +35,10 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1"
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1"
   },
   "description": ""
 }
