working on authMiddleware for carts API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     },
     "include": [
         "src/**/*",
-        "src/*.d.ts"
+        "src/*.d.ts",
+        "src/v1/custom.d.ts"
 , "index.ts"    ]
 }
